<resources>
	<string name="app_name" translatable="false">My Application</string>
	<string name="forgot_pass">Forgot Password</string>
	<string name="login_page">Login Page</string>
	<string name="username_hint">username...</string>
	<string name="password_hint">password</string>
	<string name="remember_me">Remember me</string>
	<string name="btn_login">Login</string>
	<string name="title_activity_home">HomeActivity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>