<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="16dp"
	android:paddingTop="16dp"
	android:paddingRight="16dp"
	android:paddingBottom="16dp">

	<TextView
		android:id="@+id/txn_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/login_page"
		android:textSize="22sp" />

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="32dp"
		android:hint="@string/username_hint"
		android:inputType="textEmailAddress">
		<requestFocus/>
	</EditText>

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/password_hint"
		android:inputType="textPassword" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginBottom="32dp"
		android:text="@string/forgot_pass"
		android:textColor="@android:color/holo_red_light" />

	<CheckBox
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/remember_me" />

	<Button
		android:id="@+id/btn_login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:text="@string/btn_login" />

	<Button
		android:id="@+id/btn_contact"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Contact Us"/>

</LinearLayout>