<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.20"/>

	<TextView
		android:id="@+id/txn_title"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/login_page"
		android:textSize="22sp"
		app:layout_constraintVertical_chainStyle="packed"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintBottom_toTopOf="@id/edit_username"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="@id/guideline" />

	<EditText
		android:id="@+id/edit_username"
		android:layout_width="0dp"
		android:layout_height="wrap_content"

		android:hint="@string/username_hint"
		android:inputType="textEmailAddress"
		app:layout_constraintLeft_toLeftOf="@id/txn_title"
		app:layout_constraintBottom_toTopOf="@id/edit_password"
		app:layout_constraintRight_toRightOf="@id/txn_title"
		app:layout_constraintTop_toBottomOf="@id/txn_title">

		<requestFocus />
	</EditText>

	<EditText
		android:id="@+id/edit_password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:hint="@string/password_hint"
		android:inputType="textPassword"
		app:layout_constraintBottom_toTopOf="@id/txn_forgot"
		app:layout_constraintLeft_toLeftOf="@id/txn_title"
		app:layout_constraintRight_toRightOf="@id/txn_title"
		app:layout_constraintTop_toBottomOf="@id/edit_username" />

	<TextView
		android:id="@+id/txn_forgot"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toTopOf="@id/chb_remember"
		android:text="@string/forgot_pass"
		android:textColor="@android:color/holo_red_light"
		app:layout_constraintTop_toBottomOf="@id/edit_password" />

	<CheckBox
		android:id="@+id/chb_remember"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/remember_me"
		app:layout_constraintBottom_toTopOf="@id/btn_login"
		app:layout_constraintTop_toBottomOf="@id/txn_forgot" />

	<Button
		android:id="@+id/btn_login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_login"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/chb_remember" />

</androidx.constraintlayout.widget.ConstraintLayout>